src/core/config/transformer/snapshots/tailcall__core__config__transformer__apollo_federation_subgraph__tests__keys__keys_merge.snap
---
source: src/core/config/transformer/apollo_federation_subgraph.rs
expression: keys_a.merge_right(keys_b)
---
Keys(
    {
        "a": Keys(
            {
                "1": Keys(
                    {},
                ),
                "b": Keys(
                    {},
                ),
            },
        ),
        "c": Keys(
            {
                "2": Keys(
                    {},
                ),
            },
        ),
        "d": Keys(
            {
                "3": Keys(
                    {},
                ),
            },
        ),
    },
)
